refactor: se realizaron cambios componenteA, se cambiaron controladores, se creó modelo productoDetalle, repositorios y servicios para que se pueda generar las especificaciones de apis en base al archivo YAML, tambien se hicieron cambios  al YAML, se hicieron cambios para que ahora se almacenen los productos de cada pedido en la BD
