# componenteA/src/main/java/uk/techiegt/clipe/componenteA/entities/PedidoDetalle.java
@@ -1,0 +1,28 @@
+package uk.techiegt.clipe.componenteA.entities;
+
+import jakarta.persistence.*;
+import lombok.*;
+
+@Entity
+@Table(name = "pedido_detalle")
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class PedidoDetalle {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "pedido_id", nullable = false)
+    private Pedido pedido;
+
+    @Column(nullable = false)
+    private String nombre;
+
+    @Column(nullable = false)
+    private double precio;
+}
